--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "vite": "^6.2.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3"
   }
