--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@popperjs/core": "^2.11.8",
+    "@vitejs/plugin-vue": "^5.2.3",
     "animate.css": "^4.1.1",
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "vue": "^3.5.13"
   }
 }
