--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vitejs/plugin-vue": "^5.2.3",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-easy-lightbox": "^1.19.0"
   }
 }
