--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
   web:
-    container_name: zabradli_hanak_php
+    container_name: zabradli_hanak_php              
     build: .
     ports:
       - "8080:80"
     volumes:
-      - ./backend:/var/www/html
+      - ./:/var/www/html
