feat: env recipient contact form

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,5 @@ SMTP_SERVER='smtp_server'
 PORT_NUMBER='number'
 SECURITY='security'
 TURNSTILE_SECRET_KEY='key'
+CONTACT_FORM_RECIPIENT_EMAIL_ADRESS='test@test.com'
+CONTACT_FORM_RECIPIENT_NAME='Name'
